# LIP

./: .gitattributes  .gitignore  BloomFilter.cpp  BloomFilter.h  BuildFilter.cpp  BuildFilter.h  CMakeLists.txt  Join.cpp  Join.h  JoinExecutor.cpp  JoinExecutor.h  JoinParam.cpp  JoinParam.h  Queries.cpp  Queries.h  README.md  hash.cpp  hash.h  main.cpp  main.h  old.cpp  old2.cpp  run  run_skew  select.cpp  select.h  test.csv
apps/: CMakeLists.txt  main.cpp
benchmarks/benchmark-1/: customer.tbl  date.tbl  lineorder.tbl  part.tbl  supplier.tbl
benchmarks/benchmark-skew/: lineorder-date-10-10.tbl  lineorder-date-10-50.tbl  lineorder-date-20-20.tbl  lineorder-date-5-5.tbl  lineorder-date-50-10.tbl  lineorder-date-50-50.tbl  lineorder-date-first-half.tbl  lineorder-date-linear-part-20-20-supp-10-20.tbl  lineorder-date-linear-part-20-20.tbl  lineorder-date-linear.tbl  lineorder-date-part-adversary.tbl
doc/: distributed.tex  empirical.tex  implementation.tex  introduction.tex  lip.tex  rep.bib  rep.tex  simpleConference.sty  slides.tex
scripts/: batch-sizes-adversary.txt  batch-sizes-date.txt  dist.py  gen-n-dim.py  plot.py  plot_all.py  plot_bloom_filter_tests.py  plot_cr_nick.py  plot_one.py  plot_presentation.py  plot_skew.py  skew.py  skew_nick.py  skew_types.py
src/: BloomFilter.cpp  BuildFilter.h  CMakeLists.txt  Join.cpp  Join.h  JoinExecutor.cpp  JoinExecutor.h  Makefile  Queries.cpp  Queries.h  cmake_install.cmake  main.cpp  select.cpp
util/: BloomFilterTest.cpp  BloomFilterTest.h  CMakeLists.txt  Makefile  cmake_install.cmake  util.cpp  util.h
